# Philosophers

./: .gitignore  CMakeLists.txt  Makefile  README.md
backup/: main.c  philo  philo.h  simulation.c  utils.c
philo/: Makefile  main.c  philo  philo.h  simulation.c  utils.c  utils2.c
philo_bonus/: Makefile  main.c  philo.h  philo_bonus  philo_bonus.h  simulation.c  utils.c  utils2.c  utils3.c
philo_cpp/philo_atomic_var/: CMakeLists.txt  Makefile  main.cpp
philo_cpp/philo_atomic_var/include/: Message_node.hpp  Message_queue.hpp  Philo.hpp  Philo_helper.hpp  struct.hpp
philo_cpp/philo_atomic_var/src/: Message_queue.cpp  Philo.cpp  main.cpp  philo_helper.cpp
philo_cpp/philo_atomic_var/tests/include/: Philo_fixture.hpp  input_fixture.hpp  system_tests.hpp
philo_cpp/philo_atomic_var/tests/src/: input_tests.cpp  system_tests.cpp  unit_tests.cpp
philo_cpp/philo_condition_var/: CMakeLists.txt  main.cpp
philo_cpp/philo_monitor/: CMakeLists.txt  Makefile  main.cpp
philo_cpp/philo_mutex/: CMakeLists.txt  Makefile  Philo.cpp  Philo.hpp  main.cpp  struct.hpp
philo_cpp/philo_mutex/include/: Philo.hpp  philo_helper.hpp  struct.hpp
philo_cpp/philo_mutex/src/: Philo.cpp  main.cpp  philo_helper.cpp
philo_cpp/philo_mutex/tests/: Philo_fixture.hpp  check_input_fixture.hpp  check_input_tests.cpp  philo_mut_test.cpp  time_limited_test.hpp  unit_tests.cpp
